# WattIf-PoC

./: .env.example  .gitignore  .replit  Dockerfile  LICENSE.md  Makefile  NOTICE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.agents/memory/: MEMORY.md  hf-inference-reasoning-models.md
.devcontainer/: devcontainer.json
.streamlit/: config.toml
data/samples/: .gitkeep  pv_amiens_fr.csv  pv_athens_gr.csv  pv_copenhagen_dk.csv  pv_dublin_ie.csv  pv_lyon_fr.csv  pv_madrid_es.csv
scripts/: fetch_data.py  redteam_demo.py  train_generator.py
src/whatif/: __init__.py  config.py
src/whatif/adapters/: __init__.py  base.py  data_odeon.py  data_open.py  forecaster_local.py  forecaster_odeon.py  llm_anthropic.py  llm_hf.py  llm_local.py  publisher_saref.py
src/whatif/api/: __init__.py  app.py
src/whatif/core/: __init__.py  attribution.py  battery.py  catalogue.py  explainer.py  generator.py  guardrail.py  indicators.py  profiles.py  schema.py  service.py
src/whatif/ui/: __init__.py  streamlit_app.py
tests/: test_api.py  test_attribution.py  test_guardrail.py  test_indicators.py  test_llm.py  test_smoke.py
