[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whatif-demo"
version = "2026.6.3"   # CalVer (YYYY.M.D) — keep in sync with src/whatif/__init__.py
description = "WattIf — descriptive-only what-if scenario simulator for residential prosumers (ODEON Open Call #1, Challenge 10 PoC)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [{ name = "Core Ideas Ltd" }]
keywords = ["energy", "prosumer", "what-if", "ODEON", "SAREF", "explainability"]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Heavy/optional groups are installed per milestone so `import whatif` stays light.
data = ["requests>=2.31", "httpx>=0.27", "entsoe-py>=0.6"]   # M1 data + ENTSO-E prices
pv = ["pvlib>=0.10"]                                          # M2 parametric PV
ml = ["scikit-learn>=1.3", "lightgbm>=4.0"]                   # M5 feeder option
gen = ["sdv>=1.9"]                                            # M5 generative option
llm = ["ollama>=0.3"]                                         # M4 local explainer
semantics = ["rdflib>=7.0", "pyshacl>=0.25"]                 # M6 SAREF JSON-LD
api = ["fastapi>=0.110", "uvicorn>=0.29", "pydantic>=2.6"]   # M8 API
ui = ["streamlit>=1.33", "plotly>=5.20"]                      # UI
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py39"
